Fix overflow of case studies page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,6 +376,7 @@ nav a:hover {
 
 #case-section {
     width: 100vw;
+    overflow: auto;
 }
 
 .case-container {
